# taskcooker

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
docs/: slowdown-profiler.md
reqs/: reqs.md
rules/: architecture.md  backend-tauri-rust.md  database.md  debloated-route-orchestrators.md  evidence-first-codegen.md  frontend.md  human-editability.md  security.md  testing.md
scripts/: dev-prod-db.test.mjs  ensure-dev-server.mjs  ensure-dev-server.test.mjs  install-app.sh  install-app.test.mjs  smoke.mjs
src/: main.tsx  router.test.ts  router.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_windows.rs  artifact_watcher.rs  cli.rs  commands.rs  core.rs  db_watcher.rs  lib.rs  main.rs  mcp.rs  pty.rs  remote.rs  server.rs
src-tauri/src/commands/: bulk_todos.rs  file_paths.rs  messages.rs  models.rs  project_actions.rs  project_backgrounds.rs  project_git.rs  task_titles.rs  todo_artifacts.rs  todo_panels.rs  working_directories.rs  worktrees.rs
src-tauri/src/core/: actions.rs  artifacts.rs  execution_terminals.rs  graph.rs  messages.rs  models.rs  project_links.rs  read_models.rs  schema.rs  seed.rs  settings.rs  time.rs  todo_links.rs  todo_order.rs  todos.rs  validation.rs  worktrees.rs
src-tauri/tests/: app_windows.rs  commands.rs  contexts.rs  core_services.rs  mcp.rs  project_links.rs  pty.rs  remote.rs  server.rs
(+175 files in other folders)
